# flutterbug-vms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  native_shims.c  pyproject.toml
.github/workflows/: build.yml
patches/: hugo-undef-win32.patch  remglk-rs-c-char-signedness.patch  remglk-rs-msvc-unreachable.patch  remglk-rs-window-arrangement-lock.patch  scare-undef-win32.patch
src/flutterbug_vms/: __init__.py  cli.py  console.py  runner.py
tests/: test_smoke.py
