[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flutterbug-vms"
version = "0.1.0"
description = "Native IF VM binaries (glulxe, git, bocfel, hugo, scare, tads) speaking RemGlk JSON"
requires-python = ">=3.9"

[project.scripts]
flutterbug-vm = "flutterbug_vms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
